--- a/CFMMCD/Views/Shared/_Layout.cshtml
+++ b/CFMMCD/Views/Shared/_Layout.cshtml
@@ -40,139 +40,137 @@
     <div class="navbar navbar-fixed-top">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
+                <span class="icon-bar glyphicon-menu-hamburger glyphicon"></span>
             </button>
-            <a class="navbar-brand" href="#"><img class="img-responsive" src="~/Content/Images/logo.png"></a>
+            <a class="navbar-brand" href="/Home/Index"><img class="img-responsive" src="~/Content/Images/logo.png"></a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 @{
-                    if (!(CPSession.Self.Controller.Equals("Account") || CPSession.Self.Controller.Equals("Home")))
+                    if (CPSession.Grandparent != null)
                     {
-                    <li>
-                        <a class="dropdown-toggle" type="button" data-toggle="dropdown" data-submenu aria-expanded="false" href="#">All Pages <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            @{ if (UASession.MIM)
-                                {
-                                    <li>@Html.ActionLink("Menu Item Master", "Index", "MenuItemMaster")</li>
-                                }
-                                if (UASession.RIM)
-                                {
-                                    <li>@Html.ActionLink("Raw Item Master", "Index", "RawItemMaster")</li>
-                                }
-                                if (UASession.MER)
-                                {
-                                    <li>@Html.ActionLink("Menu Recipe", "Index", "MenuRecipe")</li>
-                                }
-                                if (UASession.STP)
-                                {
-                                    <li>@Html.ActionLink("Store Profile", "Index", "StoreProfile")</li>
-                                }
-                                if (UASession.VEM)
-                                {
-                                    <li>@Html.ActionLink("Vendor Master", "Index", "VendorMaster")</li>
-                                }
-                                if (UASession.VAM)
-                                {
-                                    <li>@Html.ActionLink("Value Meal", "Index", "ValueMeal")</li>
-                                }
-                                if (UASession.UAP)
-                                {
-                                    <li class="dropdown-submenu">
-                                        <a role="menuitem" data-toggle="dropdown" tabindex="-1" href="#">User access&emsp;<span class="glyphicon glyphicon-chevron-down right"></span></a>
-                                        <ul class="dropdown-submenu">
-                                            <li>@Html.ActionLink("Create user account", "CreateAccount", "Account")</li>
-                                            <li>@Html.ActionLink("Manage user account", "EditAccount", "Account")</li>
-                                            <li>@Html.ActionLink("Manage user access", "EditAccess", "Account")</li>
-                                        </ul>
-                                    </li>
-                                }
-                                if (UASession.MIP)
-                                {
-                                    <li>@Html.ActionLink("Menu Item Price Update", "Index", "MenuItemPriceUpdate")</li>
-                                }
-                                if (UASession.SCM)
-                                {
-                                    <li>@Html.ActionLink("SCM Master Recipe", "Index", "SCMRecipe")</li>
-                                }
-                                if (UASession.TEG)
-                                {
-                                    <li>@Html.ActionLink("Text Generation (UD)", "Index", "TextGenerator")</li>
-                                }
-                                if (UASession.RIM)
-                                {
-                                    <li>@Html.ActionLink("Raw Item Price Update", "Index", "RawItemPriceUpdate")</li>
-                                }
-                                if (UASession.AUL)
-                                {
-                                    <li>@Html.ActionLink("Audit log", "Index", "AuditLog")</li>
-                                }
-                                if (UASession.REG)
-                                {
-                                    <li>@Html.ActionLink("Report generation (UD)", "Index", "ReportGeneration")</li>
-                                }
-
-                                <li class="dropdown-submenu">
-                                    <a role="menu" data-toggle="dropdown" tabindex="-0" href="#">Table Maintenance</a>
-                                    <ul class="dropdown-menu">
-                                        @{  
-                                            if (UASession.TIP)
-                                            {
-                                               
-                                                <li class="dropdown-submenu">
-                                                    <a role="menu" data-toggle="dropdown" tabindex="-1" href="#">Tier Page</a>
-                                                    <ul class="dropdown-menu">
-                                                        <li>@Html.ActionLink("Dessert Enterprise Tier (UD)", "Index", "DessertPriceTier")</li>
-                                                        <li>@Html.ActionLink("Breakfast Price Tier (UD)", "Index", "BreakfastPriceTier")</li>
-                                                        <li>@Html.ActionLink("Regular Price Tier (UD)", "Index", "RegularPriceTier")</li>
-                                                        <li>@Html.ActionLink("McCafe level 2 Price Tier (UD)", "Index", "McCafeLevel2PriceTier")</li>
-                                                        <li>@Html.ActionLink("McCafe level 3 Price Tier (UD)", "Index", "McCafeLevel3PriceTier")</li>
-                                                        <li>@Html.ActionLink("McCafe BISTRO Price Tier (UD)", "Index", "McCafeBistroPriceTier")</li>
-                                                        <li>@Html.ActionLink("MDS Price Tier", "Index (UD)", "MDSPriceTier")</li>
-                                                        <li>@Html.ActionLink("Project Gold Price Tier (UD)", "Index", "ProjectGoldPriceTier")</li>
-                                                    </ul>
-                                                </li>
-                                                   
-                                            }
-                                            if (UASession.OWN)
-                                            {
-                                                <li>@Html.ActionLink("Ownership", "Index", "Ownership")</li>
-                                            }
-                                            if (UASession.BUE)
-                                            {
-                                                <li>@Html.ActionLink("Business Extension", "Index", "BusinessExtension")</li>
-                                            }
-                                            if (UASession.LOC)
-                                            {
-                                                <li>@Html.ActionLink("Location", "Index", "Location")</li>
-                                            }
-                                            if (UASession.PRC)
-                                            {
-                                                <li>@Html.ActionLink("Profit center", "Index", "ProfitCenter")</li>
-                                            }
+                        <li>@Html.ActionLink(CPSession.Grandparent.LinkName, CPSession.Grandparent.Action, CPSession.Grandparent.Controller)</li>
+                    }
+                    if (CPSession.Parent != null)
+                    {
+                        if (CPSession.Parent.Controller.Equals("Home")) {
+                            <li><a class="dropdown-toggle" type="button" data-toggle="dropdown" data-submenu aria-expanded="false" href="#">All Pages <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    @{ if (UASession.MIM)
+                                        {
+                                            <li>@Html.ActionLink("Menu Item Master", "Index", "MenuItemMaster")</li>
                                         }
-                                    </ul>
+                                        if (UASession.RIM)
+                                        {
+                                            <li>@Html.ActionLink("Raw Item Master", "Index", "RawItemMaster")</li>
+                                        }
+                                        if (UASession.MER)
+                                        {
+                                            <li>@Html.ActionLink("Menu Recipe", "Index", "MenuRecipe")</li>
+                                        }
+                                        if (UASession.STP)
+                                        {
+                                            <li>@Html.ActionLink("Store Profile", "Index", "StoreProfile")</li>
+                                        }
+                                        if (UASession.VEM)
+                                        {
+                                            <li>@Html.ActionLink("Vendor Master", "Index", "VendorMaster")</li>
+                                        }
+                                        if (UASession.VAM)
+                                        {
+                                            <li>@Html.ActionLink("Value Meal", "Index", "ValueMeal")</li>
+                                        }
+                                        if (UASession.UAP)
+                                        {
+                                            <li class="dropdown-submenu">
+                                                <a role="menu" data-toggle="dropdown" tabindex="-1" href="#">User access&emsp;</a>
+                                                <ul class="dropdown-menu">
+                                                    <li>@Html.ActionLink("Create user account", "CreateAccount", "Account")</li>
+                                                    <li>@Html.ActionLink("Manage user account", "EditAccount", "Account")</li>
+                                                    <li>@Html.ActionLink("Manage user access", "EditAccess", "Account")</li>
+                                                </ul>
+                                            </li>
+                                        }
+                                        if (UASession.MIP)
+                                        {
+                                            <li>@Html.ActionLink("Menu Item Price Update", "Index", "MenuItemPriceUpdate")</li>
+                                        }
+                                        if (UASession.SCM)
+                                        {
+                                            <li>@Html.ActionLink("SCM Master Recipe", "Index", "SCMRecipe")</li>
+                                        }
+                                        if (UASession.TEG)
+                                        {
+                                            <li>@Html.ActionLink("Text Generation (UD)", "Index", "TextGenerator")</li>
+                                        }
+                                        if (UASession.RIM)
+                                        {
+                                            <li>@Html.ActionLink("Raw Item Price Update", "Index", "RawItemPriceUpdate")</li>
+                                        }
+                                        if (UASession.AUL)
+                                        {
+                                            <li>@Html.ActionLink("Audit log", "Index", "AuditLog")</li>
+                                        }
+                                        if (UASession.REG)
+                                        {
+                                            <li>@Html.ActionLink("Report generation (UD)", "Index", "ReportGeneration")</li>
+                                        }
 
-                                </li>
-                            }
-                        </ul>
-                    </li>
-                                                
-                                            }
-                                            if (CPSession.Grandparent != null)
-                                            {
-                                                <li>@Html.ActionLink(CPSession.Grandparent.LinkName, CPSession.Grandparent.Action, CPSession.Grandparent.Controller)</li>
-                                            }
-                                            if (CPSession.Parent != null)
-                                            {
-                                                <li>@Html.ActionLink(CPSession.Parent.LinkName, CPSession.Parent.Action, CPSession.Parent.Controller)</li>
+                                        <li class="dropdown-submenu">
+                                            <a role="menu" data-toggle="dropdown" tabindex="-0" href="#">Table Maintenance</a>
+                                            <ul class="dropdown-menu">
+                                                @{  
+                                                    if (UASession.TIP)
+                                                    {
+                                               
+                                                        <li class="dropdown-submenu">
+                                                            <a role="menu" data-toggle="dropdown" tabindex="-1" href="#">Tier Page</a>
+                                                            <ul class="dropdown-menu">
+                                                                <li>@Html.ActionLink("Dessert Enterprise Tier (UD)", "Index", "DessertPriceTier")</li>
+                                                                <li>@Html.ActionLink("Breakfast Price Tier (UD)", "Index", "BreakfastPriceTier")</li>
+                                                                <li>@Html.ActionLink("Regular Price Tier (UD)", "Index", "RegularPriceTier")</li>
+                                                                <li>@Html.ActionLink("McCafe level 2 Price Tier (UD)", "Index", "McCafeLevel2PriceTier")</li>
+                                                                <li>@Html.ActionLink("McCafe level 3 Price Tier (UD)", "Index", "McCafeLevel3PriceTier")</li>
+                                                                <li>@Html.ActionLink("McCafe BISTRO Price Tier (UD)", "Index", "McCafeBistroPriceTier")</li>
+                                                                <li>@Html.ActionLink("MDS Price Tier", "Index (UD)", "MDSPriceTier")</li>
+                                                                <li>@Html.ActionLink("Project Gold Price Tier (UD)", "Index", "ProjectGoldPriceTier")</li>
+                                                            </ul>
+                                                        </li>
+                                                   
+                                                    }
+                                                    if (UASession.OWN)
+                                                    {
+                                                        <li>@Html.ActionLink("Ownership", "Index", "Ownership")</li>
+                                                    }
+                                                    if (UASession.BUE)
+                                                    {
+                                                        <li>@Html.ActionLink("Business Extension", "Index", "BusinessExtension")</li>
+                                                    }
+                                                    if (UASession.LOC)
+                                                    {
+                                                        <li>@Html.ActionLink("Location", "Index", "Location")</li>
+                                                    }
+                                                    if (UASession.PRC)
+                                                    {
+                                                        <li>@Html.ActionLink("Profit center", "Index", "ProfitCenter")</li>
+                                                    }
+                                                }
+                                            </ul>
 
-
-                                            }
-                                            if (CPSession.Self != null)
-                                            {
-                                                <li>@Html.ActionLink(CPSession.Self.LinkName, CPSession.Self.Action, CPSession.Self.Controller)</li>
-                                            }
+                                        </li>
+                                    }
+                                </ul>
+                            </li>             
+                        }
+                        else 
+                        {
+                            <li>@Html.ActionLink(CPSession.Parent.LinkName, CPSession.Parent.Action, CPSession.Parent.Controller)</li>
+                        }
+                    }
+                    if (CPSession.Self != null)
+                    {
+                        <li>@Html.ActionLink(CPSession.Self.LinkName, CPSession.Self.Action, CPSession.Self.Controller)</li>
+                    }
                 }
             </ul>
             @{if (CPSession.Self.Controller.Equals("MenuItemMaster") || CPSession.Self.Controller.Equals("RawItemMaster"))
@@ -201,6 +199,7 @@
     </div>
 
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/Search.js"></script>
 </body>
 </html>
 <script>
