--- a/CFMMCD/Views/RawItemMaster/Index.cshtml
+++ b/CFMMCD/Views/RawItemMaster/Index.cshtml
@@ -53,8 +53,8 @@
 				<div class="col-lg-4">
 					<div class="col-lg-12">
 						<div class="form-group">
-							@Html.LabelFor(m => m.RIMRIC, "Raw item number", new { @class = "form-label", @type = "number" })
-							@Html.TextBoxFor(m => m.RIMRIC, new { @class = "form-control input-sm", @Value = Model.RIMRIC, @maxlength = "6" })
+							@Html.LabelFor(m => m.RIMRIC, "Raw item number", new { @class = "form-label"})
+							@Html.TextBoxFor(m => m.RIMRIC, new { @class = "form-control input-sm", @Value = Model.RIMRIC, @maxlength = "6", @type = "number" })
 						</div>
 						<div class="form-group">
 							@Html.LabelFor(m => m.RIMRID, "Raw item name", new { @class = "form-label" })
