--- a/CFMMCD/Views/Shared/_Layout.cshtml
+++ b/CFMMCD/Views/Shared/_Layout.cshtml
@@ -199,6 +199,7 @@
     </div>
 
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/philippines/index.js"></script>
     <script src="~/Scripts/Search.js"></script>
 </body>
 </html>
