--- a/CFMMCD/Content/Site.css
+++ b/CFMMCD/Content/Site.css
@@ -79,6 +79,10 @@ label {
   font-weight: 100;
   position: relative;
 }
+.form-group {
+    padding-left:5px;
+    padding-right:5px;
+}
 .form-label2 {
   font-family: 'Calibri Light';
   font-style: normal;
